# pico-Projects

./: README.md  dot_matrix_char_set_s.h  nRF24L01_txrx.h  pwm_init_settings.c
16x2/: 16x2_driver.c  CMakeLists.txt
Code Snippets/: HC-SR04-Operation.c  SCH_RC Transmitter (controller)_2023-10-06.json  beer_menu_attempt.txt  button_callback_function_original_config pre10-11-23.txt  rotary_callback_dt.txt
Partial Projects/2004A_screen/: 2004a_screen.c  CMakeLists.txt
Partial Projects/9488_screen/: 9488_screen.c  CMakeLists.txt
Partial Projects/Servo_And_DC_Motor.c/: CMakeLists.txt  PWM_To_Hbridge_test.c
Partial Projects/beer_rater_slave/: CMakeLists.txt  beer_rater_s.c
Partial Projects/solder_hood/: CMakeLists.txt  hooded.c
Partials/RC_RECIEVER_PROGRAM/: CMakeLists.txt
Partials/beer_rater/: beer_rate.c
RC_CONTROLLER_PROGRAM/: CMakeLists.txt  rc_control.uf2  rc_controller.c
RC_RECIEVER_PROGRAM/: CMakeLists.txt  rc_receive.uf2  rc_receiver.c
Refactorable/analog_fun/: CMakeLists.txt  anal_fun.c
Refactorable/spin_me_hall_round/: CMakeLists.txt
analog_fun/: anal_fun.c  interrupt.c
beer_rater/: CMakeLists.txt  beer_list.h  beer_rate.c  lcd_16x2.h  peri_header.h
beer_rater_master/: CMakeLists.txt  beer_rater_m.c
component_libs/: CMakeLists.txt  Poly_Tools.h  beer_list.h  dc_motors.h  lcd_16x2.h  peri_header.h  rc_nrf_configs.h
component_libs/ILI9488_Screen/: ILI9488_4_WIRE_PRO.h  ILI9488_FUNCTION.h  ILI9488_PACKET_BUILDER.h  ili9488_error_management.h  ili9488_func_def.h  ili9488_functions.h  ili9488_pin_management.h  ili9488_power_control.h  ili9488_screen_commands.h  ili_all_func_proto.h  ili_mini_function.h  spi_management.h
component_libs/ILI9488_Screen/example_test/: 9488_screen.c
component_libs/Periphereals/: CMakeLists.txt  dc_motors.h  interrupt_handler.h  pwm_motor_controller.h  shift_registers.h  sn74hc595.h  ultra_sonic_sensor.h
component_libs/Periphereals/Motors/: CMakeLists.txt  dc_motors.h  servo_motors.h  stepper_motors.h
component_libs/Periphereals/interrupt_handler/: interrupt_main_handler.h  interrupt_structs.h
component_libs/Periphereals/resources/: Rc_RGB_Combinations.h  pico_adc_input.h  pico_pin_enum.h  rand_funcs.h
component_libs/Pico_Communication/: IPC.h  com_pins.h  ipc_errors.h
component_libs/SSD1306_OLED/lib/: font.h  font5x8.h  font6x8.h
component_libs/SSD1306_OLED/ss_oled/: BitBang_I2C.c  ss_oled.c  ss_oled.h  ss_oled_demo.c
component_libs/Screen_lib/: CMakeLists.txt  ili9488_function_s(reverse_csn).h
component_libs/Screen_lib/ILI9488_Screen/: ILI9488_4_WIRE_PRO.h  ILI9488_4_WIRE_PRO_v2.h  ili9488_error_management.h  ili9488_power_control.h  ili_pio_configure.h  ili_user_config.h  spi_management.h
component_libs/Screen_lib/ILI9488_Screen/includes/: ili9488_char_set.h  ili9488_function_proto_s.h  ili9488_function_s.h  ili9488_struct_s.h
component_libs/Screen_lib/ILI9488_Screen/resources/: ili9488_pin_management.h  ili9488_screen_commands.h  spi_management.h
component_libs/Screen_lib/_1602A_lcd/: _1602a_command_s.h  lcd_16x2.h  two_by_sixteen_lcd.h
component_libs/Screen_lib/_2004A_lcd/: 2004A_4bit_wire.h  2004a_6wire_communication.h  2004a_error_management.h  _2004A_commands.h  _2004a_i2c.h
component_libs/Screen_lib/ssd1306_oled/lib/: font8x8.h  ssd1306.c
component_libs/_2004A_lcd/: 2004a_error_management.h  _2004a_i2c.h
component_libs/beer_lib/: beer_funcs.h  beer_list.h  beer_peri.h  beer_score.h  beer_transfer.h  error_manager.h  pin_manager.h  spi_management.h  spi_pin_check.h
component_libs/hi_lvl_resources/: CMakeLists.txt  gen_function_s.h  general_lcd_595_control.h  nrf_user_functions.h  project_struct_s.h  struct_definition_s.h
component_libs/lib/: README.md
component_libs/lib/nrf24l01/: Makefile  cmake_install.cmake  nrf24_driver.c  nrf24_driver.h
component_libs/lib/nrf24l01/error_manager/: Makefile  cmake_install.cmake
component_libs/lib/nrf24l01/pin_manager/: Makefile  cmake_install.cmake  pin_manager.c  pin_manager.h
component_libs/lib/nrf24l01/spi_manager/: Makefile  cmake_install.cmake
component_libs/rand_lib/: pwm_gener.h  pwm_interrupt_mine.h  rc_nrf_configs.h
component_libs/ssd1306_oled/lib/: ssd1306.h
laser_prism/: CMakeLists.txt  laser_prism.c  laser_prism_two.uf2
motor_run/: CMakeLists.txt  dc_motors.h  lcd_16x2.h  motor.c  motor_header_tester.uf2  motor_ht_test.c  peri_header.h
nema17/: CMakeLists.txt  nema_17.c
nrf24L01/: CMakeLists.txt  motor.c  nRF24L01_txrx.h  nrf24_driver.c  nrf24_driver.h  pin-manager.h  spi_manager.h
pico-Projects-main/: CMakeLists.txt
pico-Projects-main/Controller_Revision_Two/: CMakeLists.txt  controller_revision_two.c
pico-Projects-main/RC_Car_Revision_Two/: CMakeLists.txt  RC_Car_Revision_Two.c
pico-Projects-main/bt_controller/: Ball_Turret_Controller.uf2  CMakeLists.txt  ball_turret_controller.c
pico-Projects-main/bt_turret/: Ball_Turret_Receiver.uf2  CMakeLists.txt  ball_turret.c
pio_files/: cdhc_in.pio  ili9488_pio.pio  lcd_driver.pio  rotary_encoder_lib.h
rc_controller_revision_test_1/: CMakeLists(rc_base_list).txt  CMakeLists.txt  rc_controller.c  rc_controller_revision_1.c
rc_controller_revision_test_1/lib/nrf24l01/: Makefile  cmake_install.cmake
rc_controller_revision_test_1/lib/nrf24l01/error_manager/: Makefile  cmake_install.cmake
rc_controller_revision_test_1/lib/nrf24l01/pin_manager/: Makefile  cmake_install.cmake
rc_controller_revision_test_1/lib/nrf24l01/spi_manager/: Makefile  cmake_install.cmake
rc_reciever_revision_1/: CMakeLists.txt  rc_reciever_revision_1.c
rf_driver_attempt/: CMakeLists.txt  Nrfer.c
rf_driver_receiver_attempt/: Nrfer.c
rot_serve/: served.c
rotary_segment_display/: CMakeLists.txt  rotary_to_display.c
roverProject/: CMakeCache.txt  CMakeLists.txt  nRF23L01.c  nrf24_receiver_questionmark.c  nrf_transmit.c  roverBody.c
servo_test/: CMakeLists.txt  served.c
spin_me_hall_round/: CMakeLists.txt  hall_round.c
ssd1306 driver files/: CMakeLists.txt  cdhc_in.pio.h  font_8x8.h  ssd1306_commands.h  ssd1306_dev.c  ssd1306_driver_dev_pro.uf2  ssd1306_i2c_driver.h
(+56 files in other folders)
